Delete functions added

--- a/views/create.erb
+++ b/views/create.erb
@@ -1,3 +1,4 @@
 <p>Your order was successful!</p>
 <p>Total to pay: £<%= @order.total %></p>
 <p>Please call 01312902600 to pay.</p>
+<p><a href="/pizza-orders/order-deleted/<%= @order.id %>">Cancel order</a></p>
