--- a/views/show.erb
+++ b/views/show.erb
@@ -4,3 +4,4 @@
 <h3> Pizza: </h3>
   <p>Topping: <%= @order.topping %></p>
   <p>Quantity: <%= @order.quantity %></p>
+  <p><a href="/pizza-orders/order-deleted/<%= @order.id %>">Delete order</a></p>
