Add edit and update functions

--- a/views/show.erb
+++ b/views/show.erb
@@ -4,4 +4,5 @@
 <h3> Pizza: </h3>
   <p>Topping: <%= @order.topping %></p>
   <p>Quantity: <%= @order.quantity %></p>
+  <p><a href="/pizza-orders/<%= @order.id %>/edit">Change order</a></p>
   <p><a href="/pizza-orders/order-deleted/<%= @order.id %>">Delete order</a></p>
