--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/pizza-orders/<%= @order.id %>">
+<form method="post" action="/pizza-orders/<%= @order.id %>/update">
   <label for="first-name">First name:</label>
     <input id="first-name" type="text" name="first_name" value= <%= @order.first_name %>/>
 <br>
